--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-   "dev": "nodemon index.js",
-    "start": "node index.js",                  
+    "dev": "nodemon index.js",
+    "start": "node index.js",
     "build": "echo 'Backend ready!'"
   },
   "keywords": [],
@@ -26,6 +26,7 @@
     "mongoose": "^8.19.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
+    "nodemailer-brevo-transport": "^2.2.1",
     "nodemon": "^3.1.10"
   }
 }
