--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "nodemailer-brevo-transport": "^2.2.1",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "socket.io": "^4.8.3"
   }
 }
